--- a/staticWeb/static/report/report.css
+++ b/staticWeb/static/report/report.css
@@ -1,8 +1,6 @@
-body{
-    background-color: #D9D9D9;
-}
 .report-form-container{
     width: 685px;
+    height: 550px;
     padding: 20px 10px;
     font-family: Inter;
     border-radius: 10px;
@@ -10,6 +8,7 @@ body{
     background: #FFF7ED;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     z-index: 5;
+    overflow-y: auto;
 }
 .report-form-title{
     margin-bottom: 10px;
@@ -90,3 +89,11 @@ body{
 .column-split{
     border-right: 20px solid #FFF7ED;
 }
+
+@media screen and (max-width: 768px) {
+    .report-form-container {
+      width: 453px;
+      height: auto;
+      overflow-y: visible;
+    }
+  }
